#===------------------------------------------------------------------------===#
#
#                     The KLEE Symbolic Virtual Machine
#
# This file is distributed under the University of Illinois Open Source
# License. See LICENSE.TXT for details.
#
#===------------------------------------------------------------------------===#
add_subdirectory(ktest-gen)
add_subdirectory(ktest-randgen)
add_subdirectory(kleaver)
add_subdirectory(klee)
add_subdirectory(klee-exec-tree)
add_subdirectory(klee-replay)
add_subdirectory(klee-stats)
add_subdirectory(klee-zesti)
add_subdirectory(ktest-tool)
